setup/tree/apple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
  namespace: tree
spec:
  selector:
    matchLabels:
      app: apple
  replicas: 4
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        image: tutum/hello-world
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apple
  namespace: tree
spec:
  selector:
    app: apple
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
