setup/tree/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tree-ingress
  namespace: tree
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: fnbk.ddnss.de
    http:
      paths:
      - path: /
        backend:
          serviceName: apple
          servicePort: 80
      - path: /orange
        backend:
          serviceName: orange
          servicePort: 80
  - host: banana.fnbk.ddnss.de
    http:
      paths:
      - path: /*
        backend:
          serviceName: banana
          servicePort: 80
  - host: "*.fnbk.ddnss.de"
    http:
      paths:
      - path: /*
        backend:
          serviceName: orange
          servicePort: 80
